Added footer with newsletter signup.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta charset="UTF-8">
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400italic' rel='stylesheet' type='text/css'>
@@ -34,8 +34,32 @@
 
       </div>
     </div>
+
     <!--<div class="overlay_screen play_screen show"><div class="replay_button" onclick="preAnimateme()"><i class="material-icons">play_arrow</i></div></div>-->
     <!--<div class="overlay_screen replay_screen"><div class="replay_button" onclick="replaySong()"><i class="material-icons">replay</i></div></div>-->
     <!--<audio id="song_player" src="SoLong_preview.m4a" type="audio/mpeg"></audio>-->
+    <footer>
+      <div class="newsletter-container">
+        <p class="newsletter-title">NEWSLETTER</p>
+        <!-- Begin MailChimp Signup Form -->
+        
+        <div id="mc_embed_signup">
+          <form action="//eugenedelta.us15.list-manage.com/subscribe/post?u=b9321a8c2677e57b97cfebee7&amp;id=9dd567bfa5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll" class="nl-signup">
+              <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_b9321a8c2677e57b97cfebee7_9dd567bfa5" tabindex="-1" value=""></div>
+              <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+            </div>
+          </form>
+        </div>
+
+        <!--End mc_embed_signup-->
+      </div>
+      <div class="contact">
+        <a href="mailto:contact@eugenedelta.com">contact@eugenedelta.com</a>
+      </div>
+      <p>© 2017 EUGENE DELTA</p>
+    </footer>
   </body>
 </html>
