--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="newsletter-container">
         <p class="newsletter-title">NEWSLETTER</p>
         <!-- Begin MailChimp Signup Form -->
-        
+
         <div id="mc_embed_signup">
           <form action="//eugenedelta.us15.list-manage.com/subscribe/post?u=b9321a8c2677e57b97cfebee7&amp;id=9dd567bfa5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll" class="nl-signup">
@@ -56,6 +56,7 @@
 
         <!--End mc_embed_signup-->
       </div>
+      <p class="separator">*****</p>
       <div class="contact">
         <a href="mailto:contact@eugenedelta.com">contact@eugenedelta.com</a>
       </div>
