Added noselect to footer.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!--<audio id="song_player" src="SoLong_preview.m4a" type="audio/mpeg"></audio>-->
     <footer>
       <div class="newsletter-container">
-        <p class="newsletter-title">NEWSLETTER</p>
+        <p class="newsletter-title noselect">NEWSLETTER</p>
         <!-- Begin MailChimp Signup Form -->
 
         <div id="mc_embed_signup">
@@ -49,18 +49,18 @@
               <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
               <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
               <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_b9321a8c2677e57b97cfebee7_9dd567bfa5" tabindex="-1" value=""></div>
-              <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+              <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button noselect"></div>
             </div>
           </form>
         </div>
 
         <!--End mc_embed_signup-->
       </div>
-      <p class="separator">*****</p>
+      <p class="separator noselect">*****</p>
       <div class="contact">
-        <a href="mailto:contact@eugenedelta.com">contact@eugenedelta.com</a>
+        <a href="mailto:contact@eugenedelta.com" class="noselect">contact@eugenedelta.com</a>
       </div>
-      <p>© 2017 EUGENE DELTA</p>
+      <p class="noselect">© 2017 EUGENE DELTA</p>
     </footer>
   </body>
 </html>
