Added noselect to linklist.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <body>
     <div class="link_container">
       <ul class="link_list">
-        <li><a href="http://facebook.com/eugenedelta">FACEBOOK</a></li>
-        <li><a href="http://instagram.com/eugene.delta">INSTAGRAM</a></li>
-        <li><a href="http://twitter.com/eugenedelta3000">TWITTER</a></li>
+        <li><a href="http://facebook.com/eugenedelta" class="noselect">FACEBOOK</a></li>
+        <li><a href="http://instagram.com/eugene.delta" class="noselect">INSTAGRAM</a></li>
+        <li><a href="http://twitter.com/eugenedelta3000" class="noselect">TWITTER</a></li>
       </ul>
     </div>
   <!--<div class="links_left">-->
