--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         <div id="mc_embed_signup">
           <form action="//eugenedelta.us15.list-manage.com/subscribe/post?u=b9321a8c2677e57b97cfebee7&amp;id=9dd567bfa5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll" class="nl-signup">
-              <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+              <input type="text" value="" name="FNAME" class="name" id="mce-FNAME" placeholder="Name" required>
+              <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email" required>
               <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
               <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_b9321a8c2677e57b97cfebee7_9dd567bfa5" tabindex="-1" value=""></div>
               <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button noselect"></div>
