Embeded soundcloud link.

--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
   <!--</div>-->
     <div class="title-container">
       <div id="div_title" onclick="animateme()">
-        <h1 class="main_h1 noselect">EUGENE DELTA</h1>
-        <h2 class="song_h2 noselect">SO LONG</h1>
-        <p class="small_p singleP noselect">new single</p>
-        <p class="small_p comingSoonP noselect">coming soon</p>
-
+        <!--<h1 class="main_h1 noselect">EUGENE DELTA</h1>-->
+        <!--&lt;!&ndash;<p class="small_p comingSoonP noselect">-&#45;&#45;</p>&ndash;&gt;-->
+        <!--<h2 class="song_h2 noselect">SO LONG</h1>-->
+        <!--&lt;!&ndash;<p class="small_p singleP noselect">new single</p>&ndash;&gt;-->
+        <iframe width="450" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/324499966&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
       </div>
     </div>
+
+
+    <!--<a class="sc-link" href="https://soundcloud.com/eugenedelta/so-long-official">Listen to SO LONG on Soundcloud</a>-->
 
     <!--<div class="overlay_screen play_screen show"><div class="replay_button" onclick="preAnimateme()"><i class="material-icons">play_arrow</i></div></div>-->
     <!--<div class="overlay_screen replay_screen"><div class="replay_button" onclick="replaySong()"><i class="material-icons">replay</i></div></div>-->
