--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!--&lt;!&ndash;<p class="small_p comingSoonP noselect">-&#45;&#45;</p>&ndash;&gt;-->
         <!--<h2 class="song_h2 noselect">SO LONG</h1>-->
         <!--&lt;!&ndash;<p class="small_p singleP noselect">new single</p>&ndash;&gt;-->
-        <iframe width="450" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/324499966&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+        <iframe width="450" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/324499966&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
       </div>
     </div>
 
