--- a/index.html
+++ b/index.html
@@ -25,15 +25,24 @@
   <!--<div class="links_left">-->
     <!--<a href="https://geo.itunes.apple.com/us/album/lifer/id1204836754?mt=1&app=music" style="display:inline-block;overflow:hidden;background:url(http://linkmaker.itunes.apple.com/assets/shared/badges/en-us/music-lrg.svg) no-repeat;width:110px;height:40px;background-size:contain;"></a>-->
   <!--</div>-->
-    <div class="title-container">
-      <div id="div_title" onclick="animateme()">
-        <!--<h1 class="main_h1 noselect">EUGENE DELTA</h1>-->
-        <!--&lt;!&ndash;<p class="small_p comingSoonP noselect">-&#45;&#45;</p>&ndash;&gt;-->
-        <!--<h2 class="song_h2 noselect">SO LONG</h1>-->
-        <!--&lt;!&ndash;<p class="small_p singleP noselect">new single</p>&ndash;&gt;-->
-        <iframe width="450" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/324499966&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+    <!--<div class="title-container">-->
+      <!--<div id="div_title" onclick="animateme()">-->
+        <!--&lt;!&ndash;<h1 class="main_h1 noselect">EUGENE DELTA</h1>&ndash;&gt;-->
+        <!--&lt;!&ndash;<h2 class="song_h2 noselect">SO LONG</h1>&ndash;&gt;-->
+        <!--&lt;!&ndash;<p class="small_p singleP noselect">out now</p>&ndash;&gt;-->
+        <!--&lt;!&ndash;<iframe width="450" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/324499966&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>&ndash;&gt;-->
+      <!--</div>-->
+    <!--</div>-->
+    <div class="main-body-wrapper">
+      <!--<h1>Video loading...</h1>-->
+      <div class="video-wrapper">
+        <div class="video-container">
+          <iframe class="video-frame" src="https://www.youtube.com/embed/Tcv7og-3cig?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+        </div>
       </div>
     </div>
+
+
 
 
     <!--<a class="sc-link" href="https://soundcloud.com/eugenedelta/so-long-official">Listen to SO LONG on Soundcloud</a>-->
@@ -42,8 +51,11 @@
     <!--<div class="overlay_screen replay_screen"><div class="replay_button" onclick="replaySong()"><i class="material-icons">replay</i></div></div>-->
     <!--<audio id="song_player" src="SoLong_preview.m4a" type="audio/mpeg"></audio>-->
     <footer>
+      <p class="info-title noselect">MORE INFORMATION</p>
+      <p class="newsletter-title noselect">NEWSLETTER</p>
+
       <div class="newsletter-container">
-        <p class="newsletter-title noselect">NEWSLETTER</p>
+
         <!-- Begin MailChimp Signup Form -->
 
         <div id="mc_embed_signup">
@@ -60,7 +72,25 @@
 
         <!--End mc_embed_signup-->
       </div>
-      <p class="separator noselect">*****</p>
+      <!--<p class="separator noselect">*****</p>-->
+      <div class="info-box">
+        <h2 class=" info-subtitle noselect">INFORMATION<h2>
+        <p>'SO LONG' out now on:</p>
+        <p>YOUTUBE: <a href="https://youtu.be/Tcv7og-3cig">https://youtu.be/Tcv7og-3cig</a></p>
+        <p>SOUNDCLOUD: <a href="http://bit.ly/sndcld_so-long">http://bit.ly/sndcld_so-long</a></p>
+        <p>Video directed by Fabian Lang</p>
+        <p>Illustrator: Ulrich Frey</p>
+        <p>Production Supervisor: Anna Schreilechner</p>
+        <p>1st AC: Benjamin Ferschli</p>
+        <p>Hair & Makeup: Tom Mayr</p>
+        <p>Camera System: Julo Formanek & Eduard Moravec</p>
+        <p class="separator noselect">*****</p>
+        <p>SO LONG written & performed by Eugene Delta</p>
+        <p>Produced by Philip Waldenberger</p>
+        <p>Drums by Florian Nemeth</p>
+        <p>Mastered by Pete Maher</p>
+
+      </div>
       <div class="contact">
         <a href="mailto:contact@eugenedelta.com" class="noselect">contact@eugenedelta.com</a>
       </div>
